--- a/MerlionServer/Web/WebPage.css
+++ b/MerlionServer/Web/WebPage.css
@@ -64,13 +64,18 @@ h1 {
 	line-height: 1.42857143;
 }
 
-#log-view {
+#log-view-wrapper {
 	height: 400px;
 	-webkit-overflow-scrolling: touch;
 	overflow-y: scroll;
 	border: 1px solid #dfdfdf;
 	border-radius: 4px;
 	padding: 2px;
+}
+#log-view {
+	transform: translateZ(0);
+	-webkit-transform: translateZ(0);
+	-moz-transform: translateZ(0);
 }
 
 #log-view > div.not-loaded a {
