--- a/MerlionServer/Web/WebPage.css
+++ b/MerlionServer/Web/WebPage.css
@@ -84,12 +84,124 @@ header p { margin: 0; }
 	vertical-align: middle !important;
 }
 
+.table-nonlined {
+	width: 100%;
+}
+
+/******* NODES **********/
+
+
+#server-table tr { 
+	background-color: white; 
+	-webkit-transition: background-color 0.1s, border-color 0.1s;
+	-moz-transition: background-color 0.1s, border-color 0.1s;
+	border-top: 1px solid white;
+	border-bottom: 1px solid white;
+}
+
+#server-table tr:hover {
+	background-color: #fdfdfd;   
+	border-top-color: #f6f6f6;   
+	border-bottom-color: #f6f6f6;
+}
+
+#server-table h3 {
+	font-weight: 300;
+	font-family: 'Dosis', sans-serif;
+	color: #555;
+	font-size: 24px;
+	line-height: 1.6;
+	margin: 0;
+}
+#server-table h3 small {
+	font-size: 14px;
+	font-weight: 400;
+	color: #888;
+	margin: 0 6px;
+}
+
+#server-table div.throttle {
+	float: right;
+	width: 100px;
+	margin-right: 15px;
+	margin-top: 10px;
+}
+
+#server-table-columns col.column-num-rooms,
+#server-table-columns col.column-num-clients {
+	width: 14%;
+}
+
+#server-table tr.domain {
+	line-height: 1.65;
+}
+
+#server-table td.cell-domain-name {
+	padding-left: 20px;
+}
+
+#server-table td.cell-domain-name,
+#server-table td.cell-num-rooms,
+#server-table td.cell-num-clients {
+	color: #888;
+}
+#server-table tr.node td.cell-num-rooms,
+#server-table tr.node td.cell-num-clients {
+	vertical-align: top;
+	padding-top: 10px;
+	line-height: 12px;
+}
+
+/******* VERSIONS **********/
+
+#version-table tr { 
+	background-color: white; 
+	-webkit-transition: background-color 0.1s, border-color 0.1s;
+	-moz-transition: background-color 0.1s, border-color 0.1s;
+	border-top: 1px solid white;
+	border-bottom: 1px solid white;
+}
+
+#version-table tr:hover {
+	background-color: #fdfdfd;   
+	border-top-color: #f6f6f6;   
+	border-bottom-color: #f6f6f6;
+}
+
+#version-table td.cell-version-name {
+	font-weight: 300;
+	font-family: 'Dosis', sans-serif;
+	color: #555;
+	width: 56%;
+	font-size: 20px;
+	line-height: 2;
+}
+
+#version-table td.cell-num-rooms,
+#version-table td.cell-num-clients {
+	color: #888;
+	width: 12%;
+}
+
+#version-table td.cell-throttle {
+	width: 100px;
+	padding: 0 10px;
+}
+
+
+
+
+
+
+
 .form-control-upload {
 	height: 34px;
 	padding: 6px 0px;
 	font-size: 14px;
 	line-height: 1.42857143;
 }
+
+/******* LOG VIEW **********/
 
 #logpane > form {
 	padding: 5px;
